--- a/styles/aboutme.css
+++ b/styles/aboutme.css
@@ -1,6 +1,4 @@
 /*toggle nav styles*/
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
 * {
   margin: 0;
   padding: 0;
@@ -8,7 +6,8 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: sans-serif;
+  background: #f1f1f1;
 }
 
 main {
@@ -16,12 +15,12 @@ main {
 }
 
 .navbar {
-  position: fixed; /* Make navbar float */
+  position: fixed; 
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 999; /* High z-index to stay on top */
-  background-color: white; /* Prevent transparency if needed */
+  z-index: 999;
+  background-color: white; 
   box-shadow: 0 1px 4px rgb(146 161 176 / 15%);
 }
 
@@ -109,7 +108,7 @@ main {
 .navbar .menu-items {
   padding-top: 120px;
   box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
-  background-color: rgba(255, 255, 255, 0.829);
+  background-color: rgba(211, 211, 211, 0.947);
   height: 100vh;
   width: 100%;
   transform: translate(-150%);
@@ -146,7 +145,8 @@ main {
 }
 
 .navbar .menu-items .tab.active {
-  background-color: #eee;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
 }
 
 /*fade in page*/
