--- a/styles/keyinsights3.css
+++ b/styles/keyinsights3.css
@@ -1,6 +1,4 @@
 /*toggle nav styles*/
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
 * {
   margin: 0;
   padding: 0;
@@ -8,7 +6,8 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: sans-serif;
+  background: #f1f1f1;
 }
 
 main {
@@ -109,7 +108,7 @@ main {
 .navbar .menu-items {
   padding-top: 120px;
   box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
-  background-color: rgba(255, 255, 255, 0.829);
+  background-color: rgba(211, 211, 211, 0.947);
   height: 100vh;
   width: 100%;
   transform: translate(-150%);
@@ -143,10 +142,6 @@ main {
 
 .nav-container input[type="checkbox"]:checked ~ .logo{
   display: none;
-}
-
-.navbar .menu-items .tab.active {
-  background-color: #eee;
 }
 
 /*fade in page*/
