--- a/styles/aboutme.css
+++ b/styles/aboutme.css
@@ -162,3 +162,23 @@ main {
   transform: translateY(20px);
   animation: fadeInUp 0.5s ease-out forwards;
 }
+
+.title {
+  font-family: sans-serif;
+  text-align: center;
+  font-size: 33px;
+  letter-spacing: 10px;
+  padding-bottom: 20px;
+  padding-top: 40px;
+  color: #246a82; 
+}
+
+.block {
+  justify-self: center;
+  font-family: sans-serif;
+  line-height: 1.6;
+  font-size: 15px;
+  padding: 10px 20px;
+  max-width: 800px;
+  margin: 0 auto;
+}
