--- a/styles/leadership.css
+++ b/styles/leadership.css
@@ -162,3 +162,44 @@ main {
   transform: translateY(20px);
   animation: fadeInUp 0.5s ease-out forwards;
 }
+
+.main-content {
+  width: 90%;
+  margin: 0 auto;
+  padding-bottom: 100px;
+}
+
+.main-content p {
+  font-family: sans-serif;
+  line-height: 1.6;
+  font-size: 15px;
+  padding: 10px 20px;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.title {
+  font-family: sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 20px;
+  letter-spacing: 5px;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 10px 20px;
+  padding-bottom: 20px;
+  padding-top: 40px;
+  color: #246a82; 
+}
+
+.main-content h2 {
+  font-family: sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  letter-spacing: 8px;
+  text-transform: uppercase;
+  color: #135f78;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 10px 20px;
+}
