--- a/index.css
+++ b/index.css
@@ -7,7 +7,27 @@
 
 body {
   font-family: sans-serif;
-  background: #f1f1f1;
+  background: none;
+  /* background: #f1f1f1; */
+}
+
+.background-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+}
+
+.bg-pic {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
 }
 
 .home-page {
@@ -189,7 +209,7 @@ main {
     bottom: 30px;
     width: 100%;
     border: none;
-    border-bottom: 2px solid #678492;
+    border-bottom: 2px solid #4e7c93;
     margin-top: 0;
   }
   ins{
@@ -234,6 +254,23 @@ main {
       text-transform: lowercase;
       margin: .5rem 0;
       color: #455964;
+    }
+    #hr-2{
+      position: relative;
+      bottom: 10px;
+      width: 100%;
+      border: none;
+      border-bottom: 2px solid #819ca9;
+      margin-top: 0;
+    }
+    .description-three{
+      position:relative;
+      bottom: 0px;
+      font-family: inherit;
+      letter-spacing: 1.5px;
+      text-transform: lowercase;
+      margin: .5rem 0;
+      color: #264a5e;
     }
     .tokenInfo{
       /* display: flex; */
