--- a/styles/aboutme.css
+++ b/styles/aboutme.css
@@ -7,7 +7,26 @@
 
 body {
   font-family: sans-serif;
-  background: #f1f1f1;
+  background: none;
+}
+
+.abt-background-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+}
+
+.abt-bg-pic {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
 }
 
 main {
@@ -170,15 +189,20 @@ main {
   letter-spacing: 10px;
   padding-bottom: 20px;
   padding-top: 40px;
-  color: #246a82; 
+  color: white; 
 }
 
 .block {
+  box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+  border-radius: 10px;
+  color: rgb(255, 255, 255);
+  background: rgba(92, 119, 199, 0.3);
+  backdrop-filter: blur(30px);
   justify-self: center;
   font-family: sans-serif;
   line-height: 1.6;
   font-size: 15px;
-  padding: 10px 20px;
+  padding: 30px 25px;
   max-width: 800px;
-  margin: 0 auto;
+  margin-bottom: 20px;
 }
