--- a/styles/leadership.css
+++ b/styles/leadership.css
@@ -69,6 +69,7 @@ main {
 }
 
 .navbar .nav-container a {
+  position: relative;
   text-decoration: none;
   color: #0e2431;
   font-weight: 500;
@@ -77,8 +78,21 @@ main {
   transition: 0.3s ease;
 }
 
-.navbar .nav-container a:hover{
-    font-weight: bolder;
+.navbar .nav-container a::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%) scaleX(0);
+  transform-origin: center;
+  width: 100%;
+  height: 2px;
+  background-color: #0e2431;
+  transition: transform 0.3s ease;
+}
+
+.navbar .nav-container a:hover::after {
+  transform: translateX(-50%) scaleX(1);
 }
 
 .nav-container {
@@ -136,8 +150,7 @@ main {
 
 .navbar .menu-items {
   padding-top: 120px;
-  box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
-  background-color: rgba(211, 211, 211, 0.947);
+  background: #f5f5f5f4;
   height: 100vh;
   width: 100%;
   transform: translate(-150%);
@@ -151,6 +164,8 @@ main {
   margin-bottom: 1.2rem;
   font-size: 1.5rem;
   font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 1.1px;
 }
 
 .nav-container input[type="checkbox"]:checked ~ .menu-items {
@@ -174,8 +189,7 @@ main {
 }
 
 .navbar .menu-items .tab.active {
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
+  font-weight:bold;
 }
 
 /*fade in page*/
