--- a/index.css
+++ b/index.css
@@ -348,3 +348,69 @@ main {
     text-decoration: none;
   }
 }
+
+@media (max-width: 900px) {
+  html, body {
+    height: 100%;
+    width: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
+
+  .nft {
+    transform: translateY(-50px);
+    width: 400px;
+    height: 600px;
+  }
+
+  .nft:hover {
+    transform: translateY(-50px);
+  }
+
+  .nft h2 {
+    transform: translateY(-20px);
+    text-align: center;
+  }
+  .nft .price {
+    transform: translateY(-50px);
+  }
+
+  .nft .main {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .nft .main .tokenImage {
+    width: 85%;
+    height: auto;
+    max-height: 250px;
+    object-fit: cover;
+    transform: scale(0.8); 
+    transform-origin: center;
+  }
+
+  .nft .main .description {
+    margin-top: 20px;
+  }
+
+  .nft .main .description,
+  .nft .main .description-two,
+  .nft .main .description-three {
+    text-align: center;
+    bottom: 0;
+    transform: translateY(-40px);
+    font-size: 10px;
+    
+  }
+
+  .nft .main .tokenInfo {
+    flex-direction: column;
+    align-items: center;
+    bottom: 0;
+    text-align: center;
+  }
+
+  #hr-2{
+    display: none;
+  }
+}
